# kernel-paniks-orchestrator

./: Cargo.toml  README.md  build.rs  flake.nix  index.html  meta.toml  update_maven.jl
.github/workflows/: publish-maven.yml
augustomegener/: web.html
augustomegener/kernel-paniks-orchestrator/0.0.1/: kernel-paniks-orchestrator-0.0.1
kernel-paniks-orchestrator/0.0.1/: kernel-paniks-orchestrator
proto/: main.proto
src/: main.rs
src/transport/: server.rs
