[package]
name = "kernel-paniks-orchestrator"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.13"
